Har implementerat calendarFX, men det finns buggar.